refactor block def structure